--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,12 @@
     <title>Poker Game Son</title>
 </head>
 <body>
-<h1>Making a change.</h1>
+<h1>Texas Hold'em</h1>
+{{#login}}
+<input type="text" name="username"/>
+<input type="text" name="password"/>
+<button type="submit" name="login">Login</button>
+<button type="submit" name="register">register</button>
+{{/login}}
 </body>
 </html>
