Adding a bunch of CSS things.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Poker Game Son</title>
-    <script src="js/sock.js"></script>
-    <script src="js/stomp.js"></script>
-    <script src="js/main.js"></script>
+    <title>Poker Game</title>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
-<h1>Making a change.</h1>
+    <div id="container"></div>
+    <div id="topbar"></div>
+
+    <script src="js/deck.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
